apps/media/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.umhomelab.com`) || Host(`www.immich.umhomelab.com`)
      kind: Rule
      services:
        - name: immich-server
          namespace: immich
          port: 2283
  tls: {}
